--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
             android:authorities="com.example.android.sunshine.app"
             android:name=".data.WeatherProvider" />
 
+        <service android:name=".service.SunshineService"/>
     </application>
 
 </manifest>
